WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283556
[GStreamer] Fix unsafe-buffer-usage warnings in CodecUtilities module
https://bugs.webkit.org/show_bug.cgi?id=283556
Summary
[GStreamer] Fix unsafe-buffer-usage warnings in CodecUtilities module
Philippe Normand
Reported
2024-11-22 04:06:24 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-11-22 04:08:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37015
EWS
Comment 2
2024-11-22 05:50:04 PST
Committed
286951@main
(ac201c93e87c): <
https://commits.webkit.org/286951@main
> Reviewed commits have been landed. Closing PR #37015 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-22 05:51:15 PST
<
rdar://problem/140414048
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug