[GStreamer] Fix unsafe-buffer-usage warnings in CodecUtilities module https://bugs.webkit.org/show_bug.cgi?id=283556

Reviewed by Adrian Perez de Castro.

* Source/WebCore/platform/gstreamer/GStreamerCodecUtilities.cpp:

Canonical link: https://commits.webkit.org/286951@main